Minimally add API to get current and interim year
- There is a way to turn the interim year off
